Tentative to fix issue #624 Class cast exception in CL_EditorImpl line 638 when selecting chord